# oai-temporal-wealth-management

./: .gitignore  README.md  pyproject.toml  setsplitworkflows.sh
data/: accounts.json  clients.json  users.json
java/: .gitignore  README.md  build.gradle  buildcontainer.sh  dependencies.txt  runlocal.sh  runontc.sh  settings.gradle  startcloudworker.sh  startlocalworker.sh  startworkflowontc.sh
java/src/main/java/io/temporal/demo/wealthmanagement/: StartTheWorker.java
java/src/main/java/io/temporal/demo/workflowstarter/: StartTheWorkflow.java
java/src/main/resources/: application-noworker.yaml  application-tc.yaml  application.yaml
src/api/: README.md  main.py  startcloudapi.sh  startlocalapi.sh
src/common/: account_context.py  agent_constants.py  beneficiaries_manager.py  client_helper.py  client_manager.py  data_converter_helper.py  db_manager.py  investment_account_manager.py  investment_manager.py  user_message.py  util.py
src/frontend/: README.md
src/frontend/src/: App.css  App.js
src/mcpserver/: README.md  main.py  runmcp.sh
src/oai_supervisor/: README.md  main.py
src/temporal_supervisor/: README.md  claim_check_codec.py  claim_check_plugin.py  client_helper.py  cloudsendcomplianceapproval.sh  codec_server.py  localsendcomplianceapproval.sh  open_account_workflow.py  run_open_account_workflow.py  run_send_compliance_approval.py  run_supervisor.py  run_worker.py  setcloudenv.example  startcloudux.sh  startcloudworker.sh  startcodecserver.sh  startlocalopenaccount.sh  startlocalux.sh  startlocalworker.sh  supervisor_workflow.py
src/temporal_supervisor/activities/: beneficiaries.py  clients.py  db_activities.py  investments.py  open_account.py  server_side_events.py
src/temporal_supervisor/claim_check/: claim_check_codec.py  claim_check_plugin.py
src/temporal_supervisor/codec_server/: codec_server.py
src/temporal_supervisor/workflows/: open_account_workflow.py  supervisor_workflow.py
(+21 files in other folders)
