[project]
name = "oai-supervisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick Ross",email = "rick.ross@temporal.io"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "openai-agents (==0.3.2)",
    "temporalio (==1.18.1)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/common", "src/api", "src/oai_supervisor", "src/temporal_supervisor"]
